# weather-cli

./: Cargo.toml
src/: main.rs
